--- a/index.html
+++ b/index.html
@@ -11,91 +11,6 @@
 </head>
 
 <body>
-    <div class="mobile-menu">
-        <div class="topping">
-            <div class="container-fluid container-fluid--b">
-                <div class="row align-items-center">
-                    <div class="col d-sm-block d-none">
-                        <a href="#" class="topping__logo svg-block">
-                            <svg width="83px" height="23px" viewBox="0 0 83 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-family="PTSerif-Bold, PT Serif" font-size="30" font-weight="bold">
-                                    <g transform="translate(-80.000000, -39.000000)" fill="#566876">
-                                        <g transform="translate(80.000000, 30.000000)">
-                                            <text id="LOGO">
-                                                <tspan x="0" y="31">LOGO</tspan>
-                                            </text>
-                                        </g>
-                                    </g>
-                                </g>
-                            </svg>
-                        </a>
-                    </div>
-                    <div class="col-auto">
-                        <div class="mobile-menu__close svg-block">
-                            <svg width="18px" height="18px" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
-                                <g>
-                                    <path d="M505.943,6.058c-8.077-8.077-21.172-8.077-29.249,0L6.058,476.693c-8.077,8.077-8.077,21.172,0,29.249
-                                    C10.096,509.982,15.39,512,20.683,512c5.293,0,10.586-2.019,14.625-6.059L505.943,35.306
-                                    C514.019,27.23,514.019,14.135,505.943,6.058z"/>
-                                </g>
-                                <g>
-                                    <path d="M505.942,476.694L35.306,6.059c-8.076-8.077-21.172-8.077-29.248,0c-8.077,8.076-8.077,21.171,0,29.248l470.636,470.636
-                                    c4.038,4.039,9.332,6.058,14.625,6.058c5.293,0,10.587-2.019,14.624-6.057C514.018,497.866,514.018,484.771,505.942,476.694z"/>
-                                </g>
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="row align-items-center justify-content-end">
-                            <div class="col-auto">
-                                <a href="#" class="topping__cart svg-block">
-                                    <svg width="20px" height="18px" viewBox="0 0 20 18" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                            <g transform="translate(-1597.000000, -41.000000)" fill="#566876" fill-rule="nonzero">
-                                                <g transform="translate(80.000000, 30.000000)">
-                                                    <g transform="translate(1517.000000, 11.000000)">
-                                                        <path d="M9.65801777,16.3306147 C9.65801777,17.2486427 8.91462366,17.992858 7.99758766,17.992858 C7.08055166,17.992858 6.3371669,17.2486427 6.3371669,16.3306147 C6.3371669,15.4125866 7.08056101,14.6683713 7.99759701,14.6683713 C8.91463301,14.6683713 9.65801777,15.4125866 9.65801777,16.3306147 Z M14.7207761,14.6683807 C13.8037494,14.6683807 13.060346,15.4125959 13.060346,16.330624 C13.060346,17.2486521 13.8037494,17.9928674 14.7207761,17.9928674 C15.6378027,17.9928674 16.3812062,17.2486521 16.3812062,16.330624 C16.3811968,15.4125866 15.6378027,14.6683807 14.7207761,14.6683807 Z M19.8748855,6.86511388 L17.8317625,12.9443401 C17.8317625,12.9443401 17.6626367,13.8465211 16.800935,13.8465211 C15.9392333,13.8465211 7.51241702,13.8465211 6.48406732,13.8465211 C5.45571763,13.8465211 5.41250117,12.7157036 5.41250117,12.7157036 C5.41250117,12.7157036 4.31625994,4.57382527 4.26193548,4.08194696 C4.20761103,3.59006864 3.57925199,3.22549142 3.57925199,3.22549142 L0.875652174,1.96120437 C-0.604534829,1.18631513 0.0682748953,-0.288074883 0.875652174,0.0505553822 C4.30390837,1.6695351 5.89643759,2.46667395 5.99890603,3.10437754 C6.1026087,3.74331669 6.28284245,5.28197504 6.28284245,5.28197504 L6.28284245,5.29185959 C6.30383357,5.28568175 6.31864423,5.28197504 6.31864423,5.28197504 C6.31864423,5.28197504 16.8317999,5.28197504 18.9551753,5.28197504 C20.4810379,5.28197504 19.8748855,6.86759438 19.8748855,6.86511388 Z M16.9194483,10.2501529 L16.8984572,10.2513885 L6.89640019,10.2513885 L7.10256195,11.8876755 L16.4330528,11.8876755 L16.9194483,10.2501529 Z M17.8934829,6.95039626 L6.4828331,6.95039626 L6.70258065,8.69914821 C8.89137915,8.69914821 15.3010005,8.69914821 17.3774568,8.69914821 L17.8934829,6.95039626 Z"></path>
-                                                    </g>
-                                                </g>
-                                            </g>
-                                        </g>
-                                    </svg>
-                                </a>
-                            </div>
-                            <div class="col-auto">
-                                <a href="#" class="topping__link">Login</a>
-                                <a href="#" class="topping__link">Registration</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row no-gutters align-items-center">
-                <div class="col-12">
-                    <div class="mobile-menu__content text-center">
-                        <div class="mobile-menu__content-item">
-                            <a href="#" class="mobile-menu__menu-link">Winners</a>
-                        </div>
-                        <div class="mobile-menu__content-item">
-                            <a href="#" class="mobile-menu__menu-link">About Us</a>
-                        </div>
-                        <div class="mobile-menu__content-item">
-                            <a href="#" class="mobile-menu__menu-link">Contact Us</a>
-                        </div>
-                        <div class="mobile-menu__content-item">
-                            <a href="#" class="mobile-menu__menu-link">Privacy Policy</a>
-                        </div>
-                        <div class="mobile-menu__content-item">
-                            <a href="#" class="mobile-menu__menu-link">Terms & Conditions</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
     <div class="main">
         <div class="topping">
             <div class="container-fluid container-fluid--b">
@@ -115,7 +30,7 @@
                             </svg>
                         </a>
                     </div>
-                    <div class="col-auto">
+                    <div class="col-auto text-center topping__operate-col">
                         <div class="mobile-menu__trigger svg-block">
                             <svg width="18px" height="12px" viewBox="0 0 18 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -130,6 +45,17 @@
                                     </g>
                                 </g>
                             </svg>
+                        </div>
+                        <div class="mobile-menu d-lg-inline-flex d-block align-items-center">
+                            <div class="mobile-menu__item">
+                                <a href="#" class="mobile-menu__link">Winners</a>
+                            </div>
+                            <div class="mobile-menu__item">
+                                <a href="#" class="mobile-menu__link">About Us</a>
+                            </div>
+                            <div class="mobile-menu__item">
+                                <a href="#" class="mobile-menu__link">Contact Us</a>
+                            </div>
                         </div>
                     </div>
                     <div class="col">
@@ -1216,6 +1142,7 @@
     </div>
     
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/maskedinput.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.js"></script>
