--- a/forgot-password.html
+++ b/forgot-password.html
@@ -91,7 +91,7 @@
                     <div class="header__text">Enter your registered email or phone number IN the field below and we will send you instructions on how to reset your password</div>
                 </div>
                 <div class="input-pages__line">
-                    <input placeholder="Enter Amount" class="prizes__item-amount" type="text">
+                    <input placeholder="Enter Your Phone or Email" class="prizes__item-amount" type="text">
                 </div>
                 <div class="input-pages__line-submit">
                     <button type="submit" class="standart-button standart-button__fill d-inline-flex align-items-center justify-content-center">
