--- a/winners.html
+++ b/winners.html
@@ -724,6 +724,73 @@
                     </div>
                 </div>
             </div>
+            <div class="winners-page__pagination">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-auto order-md-1 order-2">
+                        <a href="#" class="winners-page__pagination-pages-arrows svg-block">
+                            <svg width="72px" height="16px" viewBox="0 0 72 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g transform="translate(-663.000000, -1748.000000)" fill="#566876" fill-rule="nonzero">
+                                        <g transform="translate(663.000000, 1730.000000)">
+                                            <g transform="translate(36.000000, 26.000000) rotate(90.000000) translate(-36.000000, -26.000000) translate(28.000000, -10.000000)">
+                                                <path d="M13.791,63.254 C14.235,62.81 14.934,62.81 15.378,63.254 C15.807,63.698 15.807,64.397 15.378,64.841 L8.728,71.492 C8.522,71.698 8.236,71.825 7.919,71.825 C7.602,71.825 7.316,71.698 7.109,71.492 L0.459,64.841 C0.015,64.397 0.015,63.698 0.459,63.254 C0.903,62.81 1.602,62.81 2.046,63.254 L6.792,68.016 L6.792,1.111 C6.791,0.492 7.299,0 7.918,0 C8.537,0 9.029,0.492 9.029,1.111 L9.029,68.015 L13.791,63.254 Z"></path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="col-md-auto col-12 order-md-2 order-1">
+                        <div class="winners-page__pagination-pages">
+                            <div class="row no-gutters align-items-center justify-content-center">
+                                <div class="col-auto">
+                                    <a href="#" class="winners-page__pagination-pages-item winners-page__pagination-pages-item--active">01</a>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#" class="winners-page__pagination-pages-item">02</a>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#" class="winners-page__pagination-pages-item">03</a>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#" class="winners-page__pagination-pages-item">04</a>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#" class="winners-page__pagination-pages-item">05</a>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#" class="winners-page__pagination-pages-item">06</a>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#" class="winners-page__pagination-pages-item">07</a>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#" class="winners-page__pagination-pages-item">08</a>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#" class="winners-page__pagination-pages-item">09</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-auto order-3">
+                        <a href="#" class="winners-page__pagination-pages-arrows svg-block">
+                            <svg width="72px" height="16px" viewBox="0 0 72 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g transform="translate(-1185.000000, -1748.000000)" fill="#566876" fill-rule="nonzero">
+                                        <g transform="translate(663.000000, 1730.000000)">
+                                            <g transform="translate(558.000000, 26.000000) rotate(-90.000000) translate(-558.000000, -26.000000) translate(550.000000, -10.000000)">
+                                                <path d="M13.791,63.254 C14.235,62.81 14.934,62.81 15.378,63.254 C15.807,63.698 15.807,64.397 15.378,64.841 L8.728,71.492 C8.522,71.698 8.236,71.825 7.919,71.825 C7.602,71.825 7.316,71.698 7.109,71.492 L0.459,64.841 C0.015,64.397 0.015,63.698 0.459,63.254 C0.903,62.81 1.602,62.81 2.046,63.254 L6.792,68.016 L6.792,1.111 C6.791,0.492 7.299,0 7.918,0 C8.537,0 9.029,0.492 9.029,1.111 L9.029,68.015 L13.791,63.254 Z"></path>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
